# agimus-demos-ur3-pointing

./: CMakeLists.txt  README-calibration.md  README-localization.md  README.md  config.rviz  demo-april-tag-plank.yaml  demo.launch  gripper_control.py  simulation.launch  supervisor.py  supervisor_gripper.py  supervisor_pickandplace.py  test_sot.py  ur3_fov.py
config/: calibrated-params.yaml
data/: calib-configs.csv  optimal-configs.csv
data-simulation/: robot.urdf
launch/: demo.launch  demo_calib.launch  demo_vision.launch  load_ur.launch  load_ur3.launch  simulation.launch  ur3_upload.launch  world_setup.launch
measurements/: camera.xml  configuration_1  configuration_10  configuration_11  configuration_12  configuration_13  configuration_2  configuration_3  configuration_4  configuration_5  configuration_6  configuration_7  configuration_8  configuration_9  pose_fPe_1.yaml  pose_fPe_10.yaml  pose_fPe_11.yaml  pose_fPe_12.yaml  pose_fPe_13.yaml  pose_fPe_2.yaml  pose_fPe_3.yaml  pose_fPe_4.yaml  pose_fPe_5.yaml  pose_fPe_6.yaml  pose_fPe_7.yaml  pose_fPe_8.yaml  pose_fPe_9.yaml  robot.urdf
measurements/measurements_26_04/: configuration_1  configuration_10  configuration_11  configuration_12  configuration_13  configuration_14  configuration_15  configuration_2  configuration_3  configuration_4  configuration_5  configuration_6  configuration_7  configuration_8  configuration_9  pose_fPe_1.yaml  pose_fPe_10.yaml  pose_fPe_11.yaml  pose_fPe_12.yaml  pose_fPe_13.yaml  pose_fPe_14.yaml  pose_fPe_15.yaml  pose_fPe_2.yaml  pose_fPe_3.yaml  pose_fPe_4.yaml  pose_fPe_5.yaml  pose_fPe_6.yaml  pose_fPe_7.yaml  pose_fPe_8.yaml  pose_fPe_9.yaml  robot.urdf
measurements/measurements_26_04_1/: configuration_1  configuration_10  configuration_14  configuration_17  configuration_2  configuration_21  configuration_22  configuration_3  configuration_4  configuration_9  pose_fPe_1.yaml  pose_fPe_16.yaml  pose_fPe_17.yaml  pose_fPe_2.yaml  pose_fPe_20.yaml  pose_fPe_4.yaml  pose_fPe_8.yaml  robot.urdf
measurements/measurements_26_04_2/: configuration_11  configuration_12  configuration_13  configuration_15  configuration_16  configuration_18  configuration_19  configuration_20  configuration_5  configuration_6  configuration_7  configuration_8  pose_fPe_10.yaml  pose_fPe_11.yaml  pose_fPe_12.yaml  pose_fPe_13.yaml  pose_fPe_14.yaml  pose_fPe_15.yaml  pose_fPe_18.yaml  pose_fPe_3.yaml  (+7 more)
meshes/: plaque.stl
report/: report.md
scripts/: calibration.py  createConstraintGraph.py  demo_calib.py  demo_ur3.py  demo_ur3_custom.py  demo_vision.py  init_ur3.py  play_path.py  script_hpp.py  tools_hpp.py
srdf/: april-tag-plank.srdf  plaque-ur3.py  plaque-ur3.srdf  ur3_robot.srdf
urdf/: april-tag-plank.urdf  plaque-ur3.py  plaque-ur3.urdf  robot-init.urdf.xacro  robot.urdf.xacro
yaml/: demo-april-tag-plank.yaml  demo-kapla.yaml  demo-plaque-ur3.yaml
(+101 files in other folders)
